Withdraw plan item A3, and record Wave 0 and Wave 1 outcomes
A3 claimed processing state survives into the second `Run` that `Driver.finish`
creates for macro-suspended units, so those units would be collected and
silently discarded. Re-checking against the 3.9.0 compiler sources while
implementing A2 shows that is not so. What `ContextBase` memoises is the `Plugin`
instance, not the phases: `Run.compileUnits` calls `addPluginPhases`, which calls
`initialize` on every run, and this plugin's `init` builds a fresh classloader,
delegate and `ProcessingState` each time. The second run starts clean, so the
proposed fix would have added machinery for a problem that does not exist. The
real costs in that area -- a whole Micronaut adapter reloaded per run -- are
already recorded as B4 and B6 and remain open.

E3's fact list also said the plugin jar is built `-release:17`. That was true
only of the Scala sources; the Java ones were emitted at class file version 69.
Corrected, since it is exactly the kind of statement a doc author would repeat.

The Wave 0 and Wave 1 entries now record what actually landed, including the two
places the plan could not be followed literally: JDK 17 and 21 cannot be added to
the CI matrix because micronaut-gradle-plugins requires JVM 25 to run at all, and
adding `-PincludeMicronautCore=true` to the publishing workflows would have
turned a visible failure into a successful upload of unresolvable POMs.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>